--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'java'
-//apply plugin: 'application'
+apply plugin: 'application'
 
 repositories {
     jcenter()
@@ -12,3 +12,4 @@ dependencies {
     testCompile 'junit:junit:4.12'
 }
 
+mainClassName = "Main"
