--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java'
-apply plugin: 'application'
+//apply plugin: 'application'
+apply plugin: 'war'
 
 repositories {
     jcenter()
@@ -12,4 +13,19 @@ dependencies {
     testCompile 'junit:junit:4.12'
 }
 
-mainClassName = "Main"
+[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+sourceCompatibility = targetCompatibility = '1.8'
+
+war { 
+    archiveName = 'payara.war'
+    exclude('**/payara/**')
+}
+
+
+//mainClassName = "Main"
+
+task run(type: JavaExec) {
+    classpath = sourceSets.main.runtimeClasspath
+    main = 'Main'
+    args war.archivePath.path
+}
